--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "http-mitm-proxy": "^1.1.0",
     "http-proxy": "^1.18.1",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
-    "standard": "^17.1.2"
+    "sqlite3": "^5.1.7"
   },
   "name": "express-proxy",
   "version": "1.0.0",
@@ -17,5 +16,8 @@
   "author": "",
   "license": "ISC",
   "type": "module",
-  "devDependencies": {}
+  "devDependencies": {
+    "standard": "^17.1.2",
+    "uglify-js": "^3.19.3"
+  }
 }
